fixed cropping callout image on mobile, got rid of capitalization in css filename

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ form{
 .back-drop{
     background-image: url("../images/machinery.jpg");
     background-size: cover;
-   
+    background-position: center center; 
     height: 100vh;
     z-index: 1;
 
